...
} as const;

export const commonMessages = {
  en: {
    common: {
      actions: {
        continue: 'Continue',
        open: 'Open',
        close: 'Close',
      },
      help: helpMessages,
    },
  },
...
